Изменение логики получения профиля
