# cmd/docs/swagger.json
@@ -273,14 +273,14 @@
                 }
             }
         },
-        "/profile/": {
+        "/profile/{id}": {
             "get": {
                 "security": [
                     {
                         "BearerAuth": []
                     }
                 ],
-                "description": "Посмотреть СВОЙ профиль",
+                "description": "Посмотреть профиль",
                 "consumes": [
                     "application/json"
                 ],
@@ -291,15 +291,24 @@
                     "Profile"
                 ],
                 "summary": "getProfile",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "ID пользователя",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
                 "responses": {
-                    "201": {
-                        "description": "Created",
+                    "200": {
+                        "description": "OK",
                         "schema": {
-                            "type": "string"
+                            "$ref": "#/definitions/responses.UserResponse"
                         }
                     },
                     "400": {
-                        "description": "Bad Request",
+                        "description": "Need int ID",
                         "schema": {
                             "type": "string"
                         }
@@ -450,6 +459,37 @@
                 "CAR"
             ]
         },
+        "responses.UserDetailsResponse": {
+            "type": "object",
+            "properties": {
+                "balance": {
+                    "type": "number"
+                }
+            }
+        },
+        "responses.UserResponse": {
+            "type": "object",
+            "properties": {
+                "email": {
+                    "type": "string"
+                },
+                "firstName": {
+                    "type": "string"
+                },
+                "lastName": {
+                    "type": "string"
+                },
+                "middleName": {
+                    "type": "string"
+                },
+                "password": {
+                    "type": "string"
+                },
+                "userDetails": {
+                    "$ref": "#/definitions/responses.UserDetailsResponse"
+                }
+            }
+        },
         "startUpModel.FounderSocials": {
             "type": "object",
             "properties": {
@@ -538,6 +578,9 @@
         "userModel.User": {
             "type": "object",
             "properties": {
+                "aboutMe": {
+                    "type": "string"
+                },
                 "confirmed": {
                     "type": "boolean"
                 },
